fix dark mode

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -121,42 +121,6 @@ button {
   @apply transition-all duration-300;
 }
 
-.dark .dark-hidden {
-  display: none !important;
-}
-
-.light .light-hidden {
-  display: none !important;
-}
-
-.progress-bar {
-  position: relative;
-  height: 6.5px;
-  background: linear-gradient(90deg, #99f9da 27.86%, #2dd6a0 51.61%);
-  border-radius: 8px;
-}
-
-.progress-bar .separation-bar {
-  height: 6.5px;
-  background: linear-gradient(90deg, #ff0000 3.21%, #ffd3d4 99.99%);
-  border-radius: 8px;
-}
-
-.progress-bar.disabled {
-  background: var(--color-bg-disabled);
-}
-
-.progress-bar.disabled .separation-bar {
-  background: var(--color-bg-disabled);
-}
-
-.progress-bar .angle {
-  position: absolute;
-  top: -9.5px;
-  margin-left: -7px;
-  transition: left 600ms ease;
-}
-
 .badge-dot::before {
   content: '';
   height: 8px;
@@ -165,10 +129,6 @@ button {
   border-radius: 50%;
   display: inline-block;
   margin-right: 8px;
-}
-
-.more-shadow {
-  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.16);
 }
 
 .custom-button-active-effect {
@@ -203,12 +163,7 @@ button {
 
 .dark .react-loading-skeleton {
   background-color: #282938 !important;
-  background-image: linear-gradient(
-    90deg,
-    #25263b,
-    #343548,
-    #25263b
-  ) !important;
+  background-image: linear-gradient(90deg, #25263b, #343548, #25263b) !important;
 }
 
 .dark-mode-toggle {
